font change, add post

--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -1,7 +1,10 @@
 @import url('http://fonts.cdnfonts.com/css/fira-mono');
+@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
+@import url(http://fonts.googleapis.com/earlyaccess/nanumgothiccoding.css);
+
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Apple SD Gothic Neo", "Malgun Gothic", "맑은 고딕", 나눔고딕, "Nanum Gothic", "Noto Sans KR", "Noto Sans CJK KR", arial, 돋움, Dotum, Tahoma, Geneva, sans-serif;
+    font-family: 'Nanum Gothic', 'Nanum Gothic Coding', -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Apple SD Gothic Neo", "Malgun Gothic", "맑은 고딕", 나눔고딕, "Nanum Gothic", "Noto Sans KR", "Noto Sans CJK KR", arial, 돋움, Dotum, Tahoma, Geneva, sans-serif;
 }
 .main_header {
     height:72px;
@@ -12,6 +15,8 @@ body {
     justify-content: space-between;
     box-shadow: rgb(0 0 0 / 8%) 0px 0px 8px;
 }
+
+
 
 .fl {float:left;}
 
