update container style

--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -16,6 +16,10 @@ body {
     box-shadow: rgb(0 0 0 / 8%) 0px 0px 8px;
 }
 
+.container{
+    width : 768px;
+    margin : 0 auto;
+}
 
 
 .fl {float:left;}
