--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -16,7 +16,7 @@ body {
     box-shadow: rgb(0 0 0 / 8%) 0px 0px 8px;
 }
 
-.container{
+.container, .postContainer {
     width : 768px;
     margin : 0 auto;
 }
@@ -59,103 +59,3 @@ body {
 .yellow {color:#FFD500}
 .red {color:#ff0000}
 
-
-//markdown style
-.container a {
-    text-decoration: none;
-    color: #2299dd;
-    cursor: pointer;
-}
-
-.container ol, .container ul {
-    overflow: auto;
-    margin: 15px 0;
-}
-
-.container ol li, .container ul li {
-    padding: 5px 0;
-}
-
-.container pre {
-    padding: 13px 15px;
-    border-radius: 2px;
-    font-size: 1em;
-    background: #f7f7f7;
-    position: relative;
-}
-
-.container code {
-    font-size: 1em;
-    color:#e96900;
-    border-radius: 2px;
-    background: #f7f7f7;
-    padding: 0px 5px;
-}
-
-.container pre code {
-    font-size: 1rem;
-    color:#000000;
-    padding: 0;
-    display: block;
-    overflow-x: auto;
-}
-
-pre>code::after {
-    position: absolute;
-    top: 0;
-    right: 0;
-    text-align: right;
-    font-size: 10px;
-    font-weight: 700;
-    letter-spacing: 1px;
-    padding: 2px 7px;
-    line-height: 15px;
-    height: 15px;
-    border-radius: 0 0 0 2px;
-}
-
-pre>code.markdown::after{content: "markdown"; color: #ffffff; background: #9b9b9b;}
-pre>code.javascript::after{content: "javascript"; color: #ffffff; background: #FFD500;}
-pre>code.css::after{content: "css"; color: #ffffff; background: #3ba2f7;}
-pre>code.java::after{content: "java"; color: #ffffff;background: #ff9c24;}
-
-blockquote blockquote {
-    margin-bottom: -15px;
-}
-
-blockquote {
-    margin: 1em 0;
-    padding: 15px 20px;
-    border-left: 4px solid #8C14D2;
-    background: #f7f7f7;
-    border-bottom-right-radius: 2px;
-    border-top-right-radius: 2px;
-}
-
-table {
-    background: #ffffff;
-    margin: 20px 0 30px;
-    border-collapse: collapse;
-    border: 1px solid #f5f5f5;
-}
-
-table thead th {
-    padding: 10px 20px;
-    font-weight: 700;
-    border: 1px solid #f5f5f5;
-    border-bottom: 1px solid #8C14D2;
-}
-
-table tbody tr:nth-child(odd) {
-    background: #ffffff;
-}
-table tbody tr:nth-child(even) {
-    background: #f9f9f9;
-}
-
-table tbody tr td {
-    min-width: 0;
-    padding: 10px 20px;
-    font-size: .85em;
-    border: 1px solid #f5f5f5;
-}
