change font import to link

--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -1,10 +1,6 @@
-@import url('http://fonts.cdnfonts.com/css/fira-mono');
-@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
-@import url(http://fonts.googleapis.com/earlyaccess/nanumgothiccoding.css);
-
 
 body {
-    font-family: 'Nanum Gothic', 'Nanum Gothic Coding', -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Apple SD Gothic Neo", "Malgun Gothic", "맑은 고딕", 나눔고딕, "Nanum Gothic", "Noto Sans KR", "Noto Sans CJK KR", arial, 돋움, Dotum, Tahoma, Geneva, sans-serif;
+    font-family: 'Fira Mono', 'Nanum Gothic', 'Nanum Gothic Coding', -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Apple SD Gothic Neo", "Malgun Gothic", "맑은 고딕", 나눔고딕, "Nanum Gothic", "Noto Sans KR", "Noto Sans CJK KR", arial, 돋움, Dotum, Tahoma, Geneva, sans-serif;
 }
 .main_header {
     height:72px;
